--- a/Projects/Others - HTML and JS stuff/treine.se/index.html
+++ b/Projects/Others - HTML and JS stuff/treine.se/index.html
@@ -10,9 +10,9 @@
     <h1 class="mainHeader">treine.se</h1>
     <nav>
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Produtos</a></li>
-            <li><a href="">Sobre nós</a></li>
+            <li><a href="pages/index.html">Home</a></li>
+            <li><a href="pages/produtos.html">Produtos</a></li>
+            <li><a href="pages/sobre.html">Sobre nós</a></li>
         </ul>
     </nav>
     <script src="main.js"></script>
