properly modified index.html and added new pages

--- a/Projects/Others - HTML and JS stuff/treine.se/contato.html
+++ b/Projects/Others - HTML and JS stuff/treine.se/contato.html
@@ -16,6 +16,13 @@
             <li><a href="contato.html">Contatos</a></li>
         </ul>
     </nav>
-    <script src="main.js"></script>
+    <main>
+        <h2>Nossos contatos:</h2>
+        <ul>
+            <li>Email: #adicionar</li>
+            <li>Telefone: #adicionar</li>
+            <li>Endereço: #adicionar</li>
+        </ul>
+    </main>
 </body>
 </html>
