--- a/Projects/Others - HTML and JS stuff/treine.se/sobre.html
+++ b/Projects/Others - HTML and JS stuff/treine.se/sobre.html
@@ -16,6 +16,8 @@
             <li><a href="contato.html">Contatos</a></li>
         </ul>
     </nav>
-    <script src="main.js"></script>
+    <main>
+        <h2></h2>
+    </main>
 </body>
 </html>
