Finished some things, moving to an actual repository

--- a/Projects/Others - HTML and JS stuff/treine.se/index.html
+++ b/Projects/Others - HTML and JS stuff/treine.se/index.html
@@ -16,6 +16,9 @@
             <li><a href="contato.html">Contatos</a></li>
         </ul>
     </nav>
+    <main>
+        
+    </main>
     <script src="main.js"></script>
 </body>
 </html>
