--- a/Projects/Others - HTML and JS stuff/treine.se/sobre.html
+++ b/Projects/Others - HTML and JS stuff/treine.se/sobre.html
@@ -17,7 +17,8 @@
         </ul>
     </nav>
     <main>
-        <h2></h2>
+        <h2>Quem somos nós?</h2>
+            <p>A treine.se é uma empresa focada em ajudar a conectar treinadores com clientes de todas as áreas do Brasil.</p>
     </main>
 </body>
 </html>
