Added a working paragraph counter

--- a/Projects/Others - HTML and JS stuff/A button game.html
+++ b/Projects/Others - HTML and JS stuff/A button game.html
@@ -11,23 +11,5 @@
     <br><br>
     <button id="paragraphCreator">And I bring back paragraphs!</button>
 </body>
-<script>
-    const deleteParagraph = document.getElementById('deleteThisParagraph');
-    const deleteButton = document.getElementById('paragraphDeleter');
-    const addParagraph = document.getElementById('paragraphCreator');
-    let paragraphCounter;
-
-    deleteButton.addEventListener('click', () => {
-        deleteParagraph.remove();
-    });
-
-    addParagraph.addEventListener('click', () => {
-        paragraphCounter++;
-        const newParagraph = document.createElement('p');
-        newParagraph.textContent(`I am child numer ${paragraphCounter}`);
-        newParagraph.classList.add('deleteThisParagraph paragraphCounter');
-        
-    })
-
-</script>
+<script src="buttons.js"></script>
 </html>
