Fix paragraph ID to class for deletion functionality

--- a/Projects/Others - HTML and JS stuff/A button game.html
+++ b/Projects/Others - HTML and JS stuff/A button game.html
@@ -6,7 +6,7 @@
     <title>I'm scripting all over the place</title>
 </head>
 <body>
-    <p id="deleteThisParagraph">My purpose is to be deleted!</p>
+    <p class="deleteThisParagraph">My purpose is to be deleted!</p>
     <button id="paragraphDeleter">My only task is to delete all paragraphs.</button>
     <br><br>
     <button id="paragraphCreator">And I bring back paragraphs!</button>
