Add secret paragraph and corresponding CSS for visibility control

--- a/Projects/Others - HTML and JS stuff/A big ol' button game/A button game.html
+++ b/Projects/Others - HTML and JS stuff/A big ol' button game/A button game.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>I'm scripting all over the place</title>
 </head>
 <body>
@@ -10,6 +11,8 @@
     <button id="paragraphDeleter">My only task is to delete all paragraphs.</button>
     <br><br>
     <button id="paragraphCreator">And I bring back paragraphs!</button>
+    <br><br>
+    <p id="secretParagraph"></p>
 </body>
 <script src="buttons.js"></script>
 </html>
