Add IDs and update content for paragraphs and buttons in HTML

--- a/Projects/Others - HTML and JS stuff/A big ol' button game/A button game.html
+++ b/Projects/Others - HTML and JS stuff/A big ol' button game/A button game.html
@@ -7,12 +7,12 @@
     <title>I'm scripting all over the place</title>
 </head>
 <body>
-    <p class="deleteThisParagraph">My purpose is to be deleted!</p>
+    <p class="deleteThisParagraph" id="firstParagraph">My purpose is to be deleted!</p>
     <button id="paragraphDeleter">My only task is to delete all paragraphs.</button>
     <br><br>
-    <button id="paragraphCreator">And I bring back paragraphs!</button>
+    <button id="paragraphCreator">And I create new paragraphs!</button>
     <br><br>
-    <p id="secretParagraph"></p>
+    <p id="secretParagraph">Surprisingly, you reached 100 new paragraphs, how many more can you manage, I wonder...?</p>
 </body>
 <script src="buttons.js"></script>
 </html>
