Add list const and fix button

--- a/Projects/2 - Segundo Período/Segundo Mes/Class 30 09 2025/index.html
+++ b/Projects/2 - Segundo Período/Segundo Mes/Class 30 09 2025/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>DOM manipulation class!</h1>
         <div class="listContainer">
-            <ul class="listThing">
+            <ul id="listThing">
                 <li>1st item</li>
                 <li>2nd item</li>
                 <li>3rd item</li>
