Start work on exercicio.html

--- a/Projects/2 - Segundo Período/Segundo Mes/Class 01 10 2025/exercicio.html
+++ b/Projects/2 - Segundo Período/Segundo Mes/Class 01 10 2025/exercicio.html
@@ -42,8 +42,50 @@
     <button id="btn-trocar-imagem">Trocar Imagem</button>
  
     <script>
-        // SEU CÓDIGO JAVASCRIPT VAI AQUI!
- 
+        const selH1 = document.getElementById('titulo')
+
+        
     </script>
 </body>
 </html>
+
+<!--
+Exercício 1: Seleção por ID Selecione o elemento <h1> com o id titulo e 
+altere seu texto (textContent) para "Bem-vindo aos Exercícios de DOM!".
+
+Exercício 2: Seleção por Classe Selecione todos os elementos com a classe paragrafo. 
+Usando um loop, altere a cor do texto de todos eles para green.
+
+Exercício 3: Seleção por Tag Selecione todos os elementos <li> da página. 
+    Imprima no console a quantidade de <li> encontrados.
+
+Exercício 4: Manipulando Estilos com Evento Crie um evento de clique (click) no 
+botão com id btn-tema. Ao ser clicado, o fundo (backgroundColor) do <body> da página 
+    deve ser alterado para #2c3e50 (um tom de cinza escuro).
+
+Exercício 5: Manipulando Atributos com Evento Crie um evento de clique no botão com 
+id btn-trocar-imagem. Ao ser clicado, o atributo src da imagem com id imagem deve ser 
+alterado para "https://via.placeholder.com/300x150.png?text=Imagem+2".
+
+Exercício 6: Lendo Valor de um Input Crie um evento de clique no botão com id 
+btn-adicionar. Ao ser clicado, ele deve pegar o texto (value) do campo de input com 
+id novo-item-input e exibi-lo em um alert().
+
+Exercício 7: Criando e Adicionando Elementos Melhore o exercício anterior. Em vez de 
+um alert(), crie um novo elemento <p>, defina seu texto com o valor do input e 
+adicione-o como filho da div com id area-de-mensagens. Limpe o campo de input 
+após adicionar a mensagem.
+
+Exercício 8: Manipulando Classes com classList.toggle Melhore o exercício 4. Em vez 
+de apenas escurecer, faça o botão btn-tema alternar uma classe chamada dark-mode no 
+<body>. Você precisará adicionar o estilo para .dark-mode no CSS dentro da tag <style>, 
+como no exemplo da aula.
+
+Exercício 9: Eventos em Múltiplos Elementos Adicione um evento de clique a cada <li> 
+da lista lista-tarefas. Ao clicar em um <li>, a classe item-selecionado deve ser 
+alternada nele (se não tem, adiciona; se tem, remove).
+
+Exercício 10: Removendo Elementos Adicione um evento de duplo clique (dblclick) em 
+cada <li> da lista lista-tarefas. Ao dar um duplo clique, o <li> clicado deve ser 
+removido da lista.
+-->
