Add selLi constant

--- a/Projects/2 - Segundo Período/Segundo Mes/Class 01 10 2025/exercicio.html
+++ b/Projects/2 - Segundo Período/Segundo Mes/Class 01 10 2025/exercicio.html
@@ -52,6 +52,11 @@
                 const element = selP[index];
                 selP.style.color = 'green';
             }
+
+        // Ex. 3:
+        const selLi = document.getElementsByTagName('li');
+            let liAmount = selI.length;
+            console.log(`A quantidade de li eh: ${liAmount}`)
     </script>
 </body>
 </html>
@@ -64,11 +69,11 @@ Exercício 2: Seleção por Classe Selecione todos os elementos com a classe par
 Usando um loop, altere a cor do texto de todos eles para green.
 
 Exercício 3: Seleção por Tag Selecione todos os elementos <li> da página. 
-    Imprima no console a quantidade de <li> encontrados.
+Imprima no console a quantidade de <li> encontrados.
 
 Exercício 4: Manipulando Estilos com Evento Crie um evento de clique (click) no 
 botão com id btn-tema. Ao ser clicado, o fundo (backgroundColor) do <body> da página 
-    deve ser alterado para #2c3e50 (um tom de cinza escuro).
+deve ser alterado para #2c3e50 (um tom de cinza escuro).
 
 Exercício 5: Manipulando Atributos com Evento Crie um evento de clique no botão com 
 id btn-trocar-imagem. Ao ser clicado, o atributo src da imagem com id imagem deve ser 
