Add fourth exercise, it's a button, splendid. I love buttons.

--- a/Projects/2 - Segundo Período/Segundo Mes/Class 01 10 2025/exercicio.html
+++ b/Projects/2 - Segundo Período/Segundo Mes/Class 01 10 2025/exercicio.html
@@ -56,7 +56,13 @@
         // Ex. 3:
         const selLi = document.getElementsByTagName('li');
             let liAmount = selI.length;
-            console.log(`A quantidade de li eh: ${liAmount}`)
+            console.log(`A quantidade de li eh: ${liAmount}`);
+
+        // Ex. 4:
+        const selTemaBotao = document.getElementById('btn-tema');
+            selTemaBotao.addEventListener('click', () => {
+                selTemaBotao.style.backgroundColor = '#2c3e50';
+            })
     </script>
 </body>
 </html>
