--- a/Projects/2 - Segundo Período/Segundo Mes/Class 01 10 2025/exercicio.html
+++ b/Projects/2 - Segundo Período/Segundo Mes/Class 01 10 2025/exercicio.html
@@ -59,9 +59,9 @@
             console.log(`A quantidade de li eh: ${liAmount}`);
 
         // Ex. 4:
-        const selTemaBotao = document.getElementById('btn-tema');
-            selTemaBotao.addEventListener('click', () => {
-                selTemaBotao.style.backgroundColor = '#2c3e50';
+        const selBtnTem = document.getElementById('btn-tema');
+            selBtnTem.addEventListener('click', () => {
+                document.body.style.backgroundColor = '#2c3e50';
             })
     </script>
 </body>
